--- a/Dl_PROJECT_CAT_AND_DOG_USING_MOBILENETV2.ipynb
+++ b/Dl_PROJECT_CAT_AND_DOG_USING_MOBILENETV2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1PEn9HIQKp8E_9tHpeMra496TZUZmx2pW",
-      "authorship_tag": "ABX9TyOgFwsOuKAmOm8jfjJPaLRZ"
+      "authorship_tag": "ABX9TyMxCJXMbJe5ttf1PecataXT"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +16,22 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ANIMAL CLASSIFICATION USING MOBILENETV2**\n",
+        "\n",
+        "Introduction\n",
+        "\n",
+        "In this notobook, I tried to classify Dog and Cat images by using MobileNet.\n",
+        "\n",
+        "MobileNets are based on a streamlined architecture that uses depth-wise separable convolutions to build light weight deep neural networks. We introduce two simple global hyper-parameters that efficiently trade off between latency and accuracy. These hyper-parameters allow the model builder to choose the right sized model for their application based on the constraints of the problem. We present extensive experiments on resource and accuracy tradeoffs and show strong performance compared to other popular models on ImageNet classification.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "39GkRXhJhIh0"
+      }
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -133,7 +149,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# now extracting the compressed data set\n",
+        "# extracting the compressed data set\n",
         "# using zip file methode\n",
         "from zipfile import ZipFile\n",
         "\n",
